# Local-File-Management

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
src/local_file_management/: __init__.py  config.py  pipeline.py
src/local_file_management/api/: app.py
src/local_file_management/collector/: file_collector.py  web_collector.py
src/local_file_management/indexer/: models.py  sqlite_indexer.py
src/local_file_management/parser/: text_parser.py
src/local_file_management/scheduler/: worker.py
tests/: conftest.py  test_api.py  test_pipeline.py
